Refactor dashboard requests to include CSRF

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -1502,5 +1502,5 @@ Dashboard{% endblock %} {% block extra_head %}
     window.location.href = `/dashboard/?mode=period&period=${encodeURIComponent(this.value)}`;
   });
 </script>
-<script src="{% static 'js/dashboard.js' %}"></script>
+<script type="module" src="{% static 'js/dashboard.js' %}"></script>
 {% endblock %}
